--- a/02_data_augmentation/01_image_augmentation.ipynb
+++ b/02_data_augmentation/01_image_augmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8d3fdc30-a6fd-489b-8c6b-c38ba3d65505",
    "metadata": {
     "tags": []
@@ -17,6 +17,10 @@
    "execution_count": null,
    "id": "56275db8-b396-49e7-8354-713996fd6ac8",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -26,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "293bd5d0-7ee1-4c5e-9d45-4ae4c34b1685",
    "metadata": {
     "tags": []
@@ -41,6 +45,10 @@
    "execution_count": null,
    "id": "c1507e27-2782-4b7d-a7c6-de23ad3894a9",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -62,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "64412026-7ab4-4964-9738-89a54d68e693",
    "metadata": {
     "tags": []
@@ -73,9 +81,22 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "6d2acffe-be2a-41e3-af79-e99dd1ee8b62",
+   "metadata": {},
+   "source": [
+    "# Notes\n",
+    "\n",
+    "1. Download `Image-DataWrangler_Capabilities.flow` file locally.\n",
+    "2. In an editor open the `.flow` file, replace the string BUCKET_NAME with the bucket name that you want to use.\n",
+    "3. Upload the edited `Image-DataWrangler_Capabilities.flow` file back."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13e9a28c-6836-45d9-841b-b722ac23adf4",
+   "id": "f6cff701-9570-4da0-a266-33e10f87caa2",
    "metadata": {},
    "outputs": [],
    "source": []
