--- a/02_data_augmentation/01_image_augmentation.ipynb
+++ b/02_data_augmentation/01_image_augmentation.ipynb
@@ -1,8 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1d53cb83-fe30-4ea0-b321-e6c0b87e9941",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Image Augmentation Lab"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "f7cf7229-a51c-4657-89de-39878c03619d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import sagemaker\n",
+    "bucket=sagemaker.Session().default_bucket()\n",
+    "prefix = 'computer_vision-unicorn_gym/image_augmentation_data'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8d3fdc30-a6fd-489b-8c6b-c38ba3d65505",
    "metadata": {
     "tags": []
@@ -13,14 +37,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0a8f88be-baab-4aa3-84b0-fc2e0046e653",
+   "metadata": {},
+   "source": [
+    "Unpack our dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "56275db8-b396-49e7-8354-713996fd6ac8",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -29,15 +57,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "293bd5d0-7ee1-4c5e-9d45-4ae4c34b1685",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "88c69b2e-4924-4711-91ae-42673839c809",
+   "metadata": {},
    "source": [
-    "BUCKET_NAME = ''"
+    "## Upload dataset to S3"
    ]
   },
   {
@@ -45,15 +69,11 @@
    "execution_count": null,
    "id": "c1507e27-2782-4b7d-a7c6-de23ad3894a9",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "!aws s3 cp --recursive  image_augmentation_data s3://{BUCKET_NAME}/computer_vision-unicorn_gym/image_augmentation_data"
+    "!aws s3 cp --recursive  image_augmentation_data s3://{bucket}/{prefix}"
    ]
   },
   {
@@ -70,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "64412026-7ab4-4964-9738-89a54d68e693",
    "metadata": {
     "tags": []
@@ -81,25 +101,32 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb071d4e-2fa2-4056-8ff2-480cc705329f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Your S3 Bucket\n",
+    "print(\"Your S3 Bucket: Name\", bucket)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6d2acffe-be2a-41e3-af79-e99dd1ee8b62",
    "metadata": {},
    "source": [
-    "# Notes\n",
+    "## Next Steps\n",
     "\n",
-    "1. Download `Image-DataWrangler_Capabilities.flow` file locally.\n",
-    "2. In an editor open the `.flow` file, replace the string BUCKET_NAME with the bucket name that you want to use.\n",
-    "3. Upload the edited `Image-DataWrangler_Capabilities.flow` file back."
+    "1. Right click on `Image-DataWrangler_Capabilities.flow` file, open with `Editor`\n",
+    "2. Replace the string BUCKET_NAME with the bucket name in `s3Uri` variable\n",
+    "\n",
+    "![Update Bucket](img/update_bucket.png)\n",
+    "\n",
+    "3. Save the bucket file and open the `Image-DataWrangler_Capabilities.flow` file with Amazon SageMaker DataWrangler"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6cff701-9570-4da0-a266-33e10f87caa2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -656,33 +683,13 @@
     "memoryGiB": 768,
     "name": "ml.g5.48xlarge",
     "vcpuNum": 192
-   },
-   {
-    "_defaultOrder": 55,
-    "_isFastLaunch": false,
-    "category": "Accelerated computing",
-    "gpuNum": 8,
-    "hideHardwareSpecs": false,
-    "memoryGiB": 1152,
-    "name": "ml.p4d.24xlarge",
-    "vcpuNum": 96
-   },
-   {
-    "_defaultOrder": 56,
-    "_isFastLaunch": false,
-    "category": "Accelerated computing",
-    "gpuNum": 8,
-    "hideHardwareSpecs": false,
-    "memoryGiB": 1152,
-    "name": "ml.p4de.24xlarge",
-    "vcpuNum": 96
    }
   ],
   "instance_type": "ml.t3.medium",
   "kernelspec": {
    "display_name": "Python 3 (Data Science)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:ap-south-1:394103062818:image/datascience-1.0"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:ap-southeast-2:452832661640:image/datascience-1.0"
   },
   "language_info": {
    "codemirror_mode": {
