Updated labelling instructions.

--- a/01_data_labelling/01_data_labelling_input.ipynb
+++ b/01_data_labelling/01_data_labelling_input.ipynb
@@ -1,6 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ac380df5-48e2-49a7-a444-32eacc5a7cb3",
+   "metadata": {},
+   "source": [
+    "# Amazon SageMaker GroundTruth Lab\n",
+    "\n",
+    "In this notebook we will prepare our unlabelled dataset by first unpacking it and then uploading it to a designated S3 bucket. We will then walkthrough the process in creating a labelling job and performing a labelling job, finally we will reveiew the results of our labelling job locally."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36bc08cc-7935-458a-876a-6092376589b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sagemaker\n",
+    "bucket=sagemaker.Session().default_bucket()\n",
+    "prefix = 'computer_vision-unicorn_gym/ground_truth_unlabeled_data/'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "56275db8-b396-49e7-8354-713996fd6ac8",
@@ -15,25 +37,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "293bd5d0-7ee1-4c5e-9d45-4ae4c34b1685",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "BUCKET_NAME = ''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "c1507e27-2782-4b7d-a7c6-de23ad3894a9",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "!aws s3 cp --recursive random_mix_bird/ s3://{BUCKET_NAME}/computer_vision-unicorn_gym/ground_truth_unlabeled_data/"
+    "!aws s3 cp --recursive random_mix_bird/ s3://{bucket}/prefix"
    ]
   },
   {
@@ -61,31 +71,32 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "333b81a8-6ef7-4032-b62b-9e0a25f6b369",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81b94970-95b7-4f51-96e1-5c3831e6e490",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Now Follow the link given below \n",
-    "\n",
-    "https://aws.amazon.com/getting-started/hands-on/machine-learning-tutorial-label-training-data/\n",
-    "\n",
-    "We are following the blog after Step 3.5"
+    "# Your S3 Bucket\n",
+    "print(f'Your S3 Bucket: Name: {bucket}')\n",
+    "print(\"Dataset S3 location: s3://{bucket}/{prefix}) "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bfdfa701-d0e3-4dc7-998f-b9e5e889151a",
-   "metadata": {
-    "tags": []
-   },
+   "id": "333b81a8-6ef7-4032-b62b-9e0a25f6b369",
+   "metadata": {},
    "source": [
-    "Once labelling Job is completed, check out `02_data_labelling_outputs.ipynb` File."
+    "## Next Steps\n",
+    "\n",
+    "1. Taking note of your S3 bucket, go to the following https://aws.amazon.com/getting-started/hands-on/machine-learning-tutorial-label-training-data/ and follow from **Step 3.5** onwards to create a labelling job and start a labelling process.\n",
+    "2. Once you have completed the labelling job, open the `02_data_labelling_outputs.ipynb` notebook to review our labelling results."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81b94970-95b7-4f51-96e1-5c3831e6e490",
+   "id": "f4f36c8b-160c-4f58-a13b-6fcce75cb2ad",
    "metadata": {},
    "outputs": [],
    "source": []
