--- a/01_data_labelling/02_data_labelling_outputs.ipynb
+++ b/01_data_labelling/02_data_labelling_outputs.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "52af8eb2-c150-4b3b-95dd-2a567b433a43",
+   "metadata": {},
+   "source": [
+    "# Review groundtruth labelling results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "41aa0a73-b8de-47a7-88c8-5b8a97314f44",
