--- a/03_training/optional-prepare-data-and-model.ipynb
+++ b/03_training/optional-prepare-data-and-model.ipynb
@@ -1401,11 +1401,13 @@
     "\n",
     "TF_FRAMEWORK_VERSION = '2.4.1'\n",
     "\n",
-    "hyperparameters = {'initial_epochs':     5,\n",
-    "                   'batch_size':         8,\n",
-    "                   'fine_tuning_epochs': 20, \n",
-    "                   'dropout':            0.4,\n",
-    "                   'data_dir':           '/opt/ml/input/data'}\n",
+    "hyperparameters = {\n",
+    "    'initial_epochs':  5,\n",
+    "    'batch_size': 8,\n",
+    "    'fine_tuning_epochs': 20, \n",
+    "    'dropout': 0.4,\n",
+    "    'data_dir': '/opt/ml/input/data'\n",
+    "}\n",
     "\n",
     "metric_definitions = [{'Name': 'loss',      'Regex': 'loss: ([0-9\\\\.]+)'},\n",
     "                  {'Name': 'acc',       'Regex': 'accuracy: ([0-9\\\\.]+)'},\n",
@@ -2331,33 +2333,13 @@
     "memoryGiB": 768,
     "name": "ml.g5.48xlarge",
     "vcpuNum": 192
-   },
-   {
-    "_defaultOrder": 55,
-    "_isFastLaunch": false,
-    "category": "Accelerated computing",
-    "gpuNum": 8,
-    "hideHardwareSpecs": false,
-    "memoryGiB": 1152,
-    "name": "ml.p4d.24xlarge",
-    "vcpuNum": 96
-   },
-   {
-    "_defaultOrder": 56,
-    "_isFastLaunch": false,
-    "category": "Accelerated computing",
-    "gpuNum": 8,
-    "hideHardwareSpecs": false,
-    "memoryGiB": 1152,
-    "name": "ml.p4de.24xlarge",
-    "vcpuNum": 96
    }
   ],
-  "instance_type": "ml.c5.large",
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
    "display_name": "Python 3 (Data Science)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:ap-south-1:394103062818:image/datascience-1.0"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:ap-southeast-2:452832661640:image/datascience-1.0"
   },
   "language_info": {
    "codemirror_mode": {
