--- a/04_deployment/sagemaker-deploy-model-for-inference.ipynb
+++ b/04_deployment/sagemaker-deploy-model-for-inference.ipynb
@@ -107,7 +107,7 @@
    "source": [
     "# INPUT REQUIRED - Please enter the S3 URI of the model artifact\n",
     "# eg: s3://sagemaker-us-east-1-xxxxxxxx/BIRD-Sagemaker-Deployment/BIRD-Sagemaker-Deployment-2022-07-27-03-33-54-592/output/model.tar.gz\n",
-    "bird_model_path = 's3://sagemaker-ap-south-1-650790930882/BIRD-Sagemaker-Deployment/BIRD-Sagemaker-Deployment-2023-07-07-12-56-42-862/output/model.tar.gz'"
+    "bird_model_path = 's3://<YOUR-BUCKET>/BIRD-Sagemaker-Deployment/BIRD-Sagemaker-Deployment-2023-07-07-12-56-42-862/output/model.tar.gz'"
    ]
   },
   {
