Updated image augmentation lab.

--- a/02_data_augmentation/01_image_augmentation.ipynb
+++ b/02_data_augmentation/01_image_augmentation.ipynb
@@ -7,7 +7,21 @@
     "tags": []
    },
    "source": [
-    "# Image Augmentation Lab"
+    "# Lab 1: Image Augmentation Lab\n",
+    "\n",
+    "In this lab we will walkthrough a typical Amazon SageMaker Datawrangler flow for creating augmented images."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d3cdeb3-e580-4e85-bb3c-44561d41a37c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
    ]
   },
   {
@@ -20,6 +34,8 @@
    "outputs": [],
    "source": [
     "import sagemaker\n",
+    "import matplotlib.pyplot as plt\n",
+    "from PIL import Image\n",
     "bucket=sagemaker.Session().default_bucket()\n",
     "prefix = 'computer_vision-unicorn_gym/image_augmentation_data'"
    ]
@@ -79,25 +95,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3233faa9-5565-4e75-9a56-a7f802a06b86",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# !aws s3 rm --recursive s3://{BUCKET_NAME}/computer_vision-unicorn_gym/image_augmentation_data/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "64412026-7ab4-4964-9738-89a54d68e693",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "!rm -rf image_augmentation_data"
+    "# !rm -rf image_augmentation_data"
    ]
   },
   {
@@ -110,7 +114,7 @@
    "outputs": [],
    "source": [
     "# Your S3 Bucket\n",
-    "print(\"Your S3 Bucket: Name\", bucket)"
+    "print(\"Your S3 Bucket Name: \", bucket)"
    ]
   },
   {
@@ -118,14 +122,204 @@
    "id": "6d2acffe-be2a-41e3-af79-e99dd1ee8b62",
    "metadata": {},
    "source": [
-    "## Next Steps\n",
+    "## Image Processing in Data Wrangler\n",
     "\n",
     "1. Right click on `Image-DataWrangler_Capabilities.flow` file, open with `Editor`\n",
-    "2. Replace the string BUCKET_NAME with the bucket name in `s3Uri` variable\n",
+    "2. Replace the **all** instances of the string `BUCKET_NAME` with your bucket name for the `s3Uri` or `output_path` variable\n",
     "\n",
     "![Update Bucket](img/update_bucket.png)\n",
     "\n",
-    "3. Save the bucket file and open the `Image-DataWrangler_Capabilities.flow` file with Amazon SageMaker DataWrangler"
+    "3. Save the bucket file and open the `Image-DataWrangler_Capabilities.flow` file with Amazon SageMaker DataWrangler\n",
+    "4. Create a data wrangler flow job"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e02eb894-53ea-48cd-95ea-ccb9c96d23c0",
+   "metadata": {},
+   "source": [
+    "## Download and preview augmented images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87b0d746-e27b-493a-b96f-021975a49261",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "augmented_images_base = 'augmented_data'\n",
+    "\n",
+    "color_suffix = 'color'\n",
+    "blur_suffix = 'blur'\n",
+    "corrupt_suffix = 'corrupt'\n",
+    "enhanced_suffix = 'enhanced'\n",
+    "\n",
+    "color_dir = os.path.join(augmented_images_base, color_suffix)\n",
+    "blur_dir = os.path.join(augmented_images_base, blur_suffix)\n",
+    "corrupt_dir = os.path.join(augmented_images_base, corrupt_suffix)\n",
+    "enhanced_dir = os.path.join(augmented_images_base, enhanced_suffix)\n",
+    "\n",
+    "if not os.path.exists(augmented_images_base):\n",
+    "    os.mkdir(augmented_images_base)\n",
+    "\n",
+    "if not os.path.exists(color_dir):\n",
+    "    os.mkdir(color_dir)\n",
+    "\n",
+    "if not os.path.exists(blur_dir):\n",
+    "    os.mkdir(blur_dir)\n",
+    "    \n",
+    "if not os.path.exists(corrupt_dir):\n",
+    "    os.mkdir(corrupt_dir)\n",
+    "\n",
+    "if not os.path.exists(enhanced_dir):\n",
+    "    os.mkdir(enhanced_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20ea9f80-cff5-42ba-9aec-607a15c6a25d",
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "prefix = 'computer_vision-unicorn_gym/image_augmentation_output_data_wrangler'\n",
+    "\n",
+    "!aws s3 cp --recursive s3://{bucket}/{prefix}/{color_suffix} {color_dir}\n",
+    "!aws s3 cp --recursive s3://{bucket}/{prefix}/{blur_suffix} {blur_dir}\n",
+    "!aws s3 cp --recursive s3://{bucket}/{prefix}/{corrupt_suffix} {corrupt_dir}\n",
+    "!aws s3 cp --recursive s3://{bucket}/{prefix}/{enhanced_suffix} {enhanced_dir}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc51cc6e-3e15-4bd6-a3e9-28d57550b401",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from PIL import Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b78ad7e-eacf-4359-816f-e6fc596f3ba9",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "sample_filename = 'Tree_Sparrow_0005_122949.jpg'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0386d40-5bd3-4a3c-8c40-37daa1714094",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def get_sample(input_dir, sample_name):\n",
+    "    for root, dirs, files in os.walk(input_dir):\n",
+    "        for file in files:\n",
+    "            if sample_name == file:\n",
+    "                return os.path.join(root, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "587b0c62-227a-47d6-8919-3c74b1acc8fa",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "get_sample(color_dir, sample_filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb34e48b-9188-4acc-9855-dcf3a0292fa8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "original_img = Image.open(os.path.join('image_augmentation_data', '130_tree_sparrow', sample_filename))\n",
+    "blur_img = Image.open(get_sample(blur_dir, sample_filename))\n",
+    "color_img = Image.open(get_sample(color_dir, sample_filename))\n",
+    "corrupt_img = Image.open(get_sample(corrupt_dir, sample_filename))\n",
+    "enhanced_img = Image.open(get_sample(enhanced_dir, sample_filename))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c43181a-0edc-4473-9262-74e3847210fd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(15,50))\n",
+    "plt.subplot(1,5,1)\n",
+    "plt.imshow(original_img)\n",
+    "plt.title(\"Original image\")\n",
+    "plt.axis(\"off\")\n",
+    "plt.subplot(1,5, 2)\n",
+    "plt.imshow(blur_img)\n",
+    "plt.title(\"Blur image\")\n",
+    "plt.axis(\"off\")\n",
+    "plt.subplot(1,5, 3)\n",
+    "plt.imshow(color_img)\n",
+    "plt.title(\"Colorized image\")\n",
+    "plt.axis(\"off\")\n",
+    "plt.subplot(1,5, 4)\n",
+    "plt.imshow(corrupt_img)\n",
+    "plt.title(\"Corrupt image\")\n",
+    "plt.axis(\"off\")\n",
+    "plt.subplot(1,5, 5)\n",
+    "plt.imshow(enhanced_img)\n",
+    "plt.title(\"Enhanced image\")\n",
+    "plt.axis(\"off\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6aba038f-7436-4ba6-b5a1-6284cc80d79e",
+   "metadata": {},
+   "source": [
+    "## Clean up resource"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "429996f3-3290-4f82-adcf-520504f7f111",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!aws s3 rm --recursive s3://{BUCKET_NAME}/computer_vision-unicorn_gym/image_augmentation_data/\n",
+    "!aws s3 rm --recursive s3://{bucket}/{prefix}/{color_suffix}/\n",
+    "!aws s3 rm --recursive s3://{bucket}/{prefix}/{blur_suffix}/\n",
+    "!aws s3 rm --recursive s3://{bucket}/{prefix}/{corrupt_suffix}/\n",
+    "!aws s3 rm --recursive s3://{bucket}/{prefix}/{enhanced_suffix}/"
    ]
   }
  ],
@@ -683,6 +877,26 @@
     "memoryGiB": 768,
     "name": "ml.g5.48xlarge",
     "vcpuNum": 192
+   },
+   {
+    "_defaultOrder": 55,
+    "_isFastLaunch": false,
+    "category": "Accelerated computing",
+    "gpuNum": 8,
+    "hideHardwareSpecs": false,
+    "memoryGiB": 1152,
+    "name": "ml.p4d.24xlarge",
+    "vcpuNum": 96
+   },
+   {
+    "_defaultOrder": 56,
+    "_isFastLaunch": false,
+    "category": "Accelerated computing",
+    "gpuNum": 8,
+    "hideHardwareSpecs": false,
+    "memoryGiB": 1152,
+    "name": "ml.p4de.24xlarge",
+    "vcpuNum": 96
    }
   ],
   "instance_type": "ml.t3.medium",
