Updated inference notebook.

--- a/04_deployment/01_sagemaker-deploy-model-for-inference.ipynb
+++ b/04_deployment/01_sagemaker-deploy-model-for-inference.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Deploy Models for Inference\n",
+    "## Lab 4: Deploy Models for Inference\n",
     "\n",
     "1. [Introduction](#Introduction)\n",
     "2. [Prerequisites](#Prerequisites)\n",
@@ -107,7 +107,7 @@
    "source": [
     "# INPUT REQUIRED - Please enter the S3 URI of the model artifact\n",
     "# eg: s3://sagemaker-us-east-1-xxxxxxxx/BIRD-Sagemaker-Deployment/BIRD-Sagemaker-Deployment-2022-07-27-03-33-54-592/output/model.tar.gz\n",
-    "bird_model_path = 's3://<YOUR-BUCKET>/BIRD-Sagemaker-Deployment/BIRD-Sagemaker-Deployment-2023-07-07-12-56-42-862/output/model.tar.gz'"
+    "bird_model_path = 's3://<YOUR_BUCKET>/BIRD-Sagemaker-Deployment/BIRD-Sagemaker-Deployment-2023-07-07-12-56-42-862/output/model.tar.gz'"
    ]
   },
   {
@@ -263,7 +263,10 @@
     "\n",
     "serializer = IdentitySerializer(content_type=\"application/x-image\")\n",
     "deserializer = JSONDeserializer(accept='application/json')\n",
-    "endpoint_name = \"tensorflow-inference-2023-07-07-13-13-00-811\"\n",
+    "\n",
+    "####################################################\n",
+    "endpoint_name = \"<YOUR_ENDPOINT_NAME>\"\n",
+    "####################################################\n",
     "\n",
     "predictor = Predictor(endpoint_name=endpoint_name,serializer = serializer,deserializer = deserializer )"
    ]
@@ -361,7 +364,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "predictor.delete_endpoint()"
+   ]
   }
  ],
  "metadata": {
@@ -944,7 +949,7 @@
   "kernelspec": {
    "display_name": "Python 3 (Data Science)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:ap-south-1:394103062818:image/datascience-1.0"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:ap-southeast-2:452832661640:image/datascience-1.0"
   },
   "language_info": {
    "codemirror_mode": {
