--- a/02a_training_pytorch/01_augment_pytorch_classification.ipynb
+++ b/02a_training_pytorch/01_augment_pytorch_classification.ipynb
@@ -16,7 +16,9 @@
     "For this notebook we will be using the `ml.g4dn.xlarge` instance type\n",
     "\n",
     "- Download the dataset from the provided link by updating the `<dataset_url>` below\n",
-    "- Unpack the dataset."
+    "- Unpack the dataset.\n",
+    "\n",
+    "**Note**: The unpacking will take ~5-10 minutes."
    ]
   },
   {
