--- a/01_data_labelling/01_data_labelling_input.ipynb
+++ b/01_data_labelling/01_data_labelling_input.ipynb
@@ -79,7 +79,7 @@
    "source": [
     "# Your S3 Bucket\n",
     "print(f'Your S3 Bucket: Name: {bucket}')\n",
-    "print(\"Dataset S3 location: s3://{bucket}/{prefix}) "
+    "print(f'Dataset S3 location: s3://{bucket}/{prefix}') "
    ]
   },
   {
@@ -682,7 +682,7 @@
   "kernelspec": {
    "display_name": "Python 3 (Data Science)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:ap-south-1:394103062818:image/datascience-1.0"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:ap-southeast-2:452832661640:image/datascience-1.0"
   },
   "language_info": {
    "codemirror_mode": {
