--- a/01_data_labelling/01_data_labelling_input.ipynb
+++ b/01_data_labelling/01_data_labelling_input.ipynb
@@ -43,7 +43,7 @@
    },
    "outputs": [],
    "source": [
-    "!aws s3 cp --recursive random_mix_bird/ s3://{bucket}/prefix"
+    "!aws s3 cp --recursive random_mix_bird/ s3://{bucket}/{prefix}"
    ]
   },
   {
